--- a/Aplikacija/app.css
+++ b/Aplikacija/app.css
@@ -30,3 +30,25 @@
 .subscribe-container form input[type="email"] {
   flex: 1 1 250px;
 }
+
+main {
+  width: 50%;
+  margin: 50px auto;
+  text-align: center;
+}
+
+table {
+  margin: 50px auto;
+}
+
+table,
+th,
+td {
+  border-collapse: collapse;
+  border: 1px solid #000;
+}
+
+th,
+td {
+  padding: 5px;
+}
