--- a/Aplikacija/app.css
+++ b/Aplikacija/app.css
@@ -52,3 +52,11 @@ th,
 td {
   padding: 5px;
 }
+
+.footer {
+  text-align: center;
+  color: gray;
+  position: absolute;
+  bottom: 20px;
+  right: 44%;
+}
